fix: added webinar

--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -11,13 +11,9 @@ import HeroMobileBackground from "../../assets/fondo_banner_principal_mobile.png
   <div
     class="flex gap-2 bg-azul p-2 md:p-4 w-full justify-center text-white items-center"
   >
-    <h1 class="text-xl md:text-3xl font-bold font-nunito">SEMINARIO</h1>
-    <h1
-      class="md:text-xl text-sm border border-white rounded-lg p-1 font-semibold px-2"
-    >
-      <span class="text-rojo">&#8226;</span> ONLINE
+    <h1 class="text-xl md:text-3xl font-bold font-nunito text-center">
+      Atención: Médicos, Odontólogos, Nutriologos, Psicólogos o Terapeutas
     </h1>
-    <h1 class="text-lg md:text-3xl font-bold font-nunito">GRATUITO</h1>
   </div>
   <div class="md:bg-transparent md:px-0 pb-80 md:pb-0">
     <div class="relative min-h-[716px]">
@@ -49,7 +45,7 @@ import HeroMobileBackground from "../../assets/fondo_banner_principal_mobile.png
         <h1
           class="text-amarillo md:text-5xl font-bold font-nunito py-2 text-3xl"
         >
-          ATRAE PACIENTES EN INTERNET
+          ATRAE PACIENTES DE INTERNET
         </h1>
         <p class="md:text-2xl font-semibold text-sm">
           Utilizando las estrategias que aplican las grandes agencias de
@@ -77,26 +73,6 @@ import HeroMobileBackground from "../../assets/fondo_banner_principal_mobile.png
             <HeroForm />
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="px-3 md:pt-4">
-    <div
-      class="md:my-12 my-8 bg-azul p-4 md:w-[800px] mx-auto flex rounded-xl shadow-lg md:gap-4 md:px-10 px-5 items-center"
-    >
-      <Image
-        src={Trofeo}
-        alt="background image"
-        height={80}
-        class="mx-auto md:mx-0"
-      />
-      <div class="font-montserrat px-4">
-        <p class="text-azulneon md:text-2xl font-bold">
-          [Obtendras resultados en 30 dias o menos,
-        </p>
-        <p class="text-white md:text-2xl">
-          incluso, sin tener que publicar imágenes en Instagram a cada rato]
-        </p>
       </div>
     </div>
   </div>
