--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/hero/Hero.astro";
 import Clases from "../components/entrenamiento/Clases.astro";
 import Footer from "../components/Footer.astro";
+import Quien from "../components/webinar/Quien.astro";
 ---
 
 <Layout title="Atrae pacientes en internet">
@@ -28,6 +29,7 @@ import Footer from "../components/Footer.astro";
       </svg>
     </button>
     <Clases />
+    <Quien />
     <Footer />
   </main>
 </Layout>
