--- a/src/components/entrenamiento/BottomForm.astro
+++ b/src/components/entrenamiento/BottomForm.astro
@@ -4,7 +4,7 @@ import ElasticForm from "../hero/ElasticForm.astro";
 
 <div class="bg-azul h-16"></div>
 
-<section class="px-4 mt-10">
+<section class="px-4 md:mt-10 mt-2">
   <div
     class="text-center font-soap text-xl md:text-3xl text-azul flex flex-col items-center gap-2"
   >
