--- a/src/pages/webinar.astro
+++ b/src/pages/webinar.astro
@@ -43,7 +43,7 @@ const elements = [
 
 <Layout title="Webinar AumentaPacientes">
   <section class="mt-0 md:mt-8">
-    <div class="bg-azul p-8">
+    <div class="bg-azul md:p-8 p-2">
       <h1 class="text-2xl md:text-4xl text-center text-white font-bold">
         Taller CONSIGUE PACIENTES EN REDES SOCIALES
       </h1>
@@ -60,7 +60,11 @@ const elements = [
       </div>
 
       <div class="grid md:grid-cols-2 md:gap-8 items-center">
-        <Image src={Hero} alt="Taller Aumentapacientes" class="fit p-4" />
+        <Image
+          src={Hero}
+          alt="Taller Aumentapacientes"
+          class="fit p-4 hidden md:block"
+        />
         <div>
           <p
             class="text-xl md:text-3xl md:py-4 py-1 text-azul font-semibold text-center"
