--- a/src/components/webinar/WebinarForm.astro
+++ b/src/components/webinar/WebinarForm.astro
@@ -1,7 +1,7 @@
 <div
-  class="bg-azul p-2 md:p-4 my-2 md:my-8 text-white flex flex-col md:flex-row md:justify-between items-center"
+  class="bg-azul px-2 pb-4 md:p-4 md:my-8 text-white grid md:grid-cols-2 md:justify-between items-center"
 >
-  <div class="md:mx-16">
+  <div class="md:mx-16 order-last md:order-first">
     <div class="text-center md:text-left pt-8 md:pt-0">
       <p class="font-bold md:text-xl">Reserva tu lugar</p>
       <p class="font-semibold md:text-xl">Miercoles 29 de Mayo</p>
@@ -17,7 +17,9 @@
     class="EWF__form Inline"
   >
     <fieldset class="webform-custominputs">
-      <div class="flex flex-col gap-4 md:flex-row md:gap-8 mt-8 p-4">
+      <div
+        class="grid md:grid-cols-2 gap-4 md:flex-row md:gap-8 mt-2 md:mt-8 p-4"
+      >
         <input
           maxlength="81"
           class="px-8 h-14 text-primary text-black"
