fix: add new form

--- a/src/components/webinar/WebinarForm.astro
+++ b/src/components/webinar/WebinarForm.astro
@@ -47,13 +47,13 @@
             <input
               type="checkbox"
               name="publiclistid"
-              id="FZsDZGNp"
-              value="a3ed93f8-afd9-4c63-b1b7-d30911ed294c"
+              id="aJrObnly"
+              value="0653b812-88b1-47a4-a344-236cd11a5439"
               checked="checked"
             />
           </label>
-          <label class="publiclistlabel" for="FZsDZGNp"
-            >[1] Aumenta Pacientes Febreri
+          <label class="publiclistlabel" for="aJrObnly"
+            >Aumenta Pacientes Febreri
           </label>
         </div>
       </div>
