fix: update gracias page

--- a/src/components/webinar/WebinarForm.astro
+++ b/src/components/webinar/WebinarForm.astro
@@ -69,7 +69,7 @@
       <input
         type="hidden"
         name="returnUrl"
-        value="http://aumentapacientes.com/gracias"
+        value="http://aumentapacientes.com/wgracias"
       />
       <input type="hidden" name="activationReturnUrl" value="" />
       <input type="hidden" name="alreadyactiveurl" value="" />
