fix: add manual events

--- a/src/pages/wgracias.astro
+++ b/src/pages/wgracias.astro
@@ -1,14 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import LayoutLead from "../layouts/LayoutLead.astro";
 ---
 
-<script>
-  setTimeout(() => {
-    window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
-  }, 5000);
-</script>
-
-<Layout title="Gracias por registrarte">
+<LayoutLead title="Gracias por registrarte">
   <div class="bg-rojo text-white text-xl md:text-2xl uppercase">
     <div class="relative flex overflow-x-hidden">
       <div class="py-12 animate-marquee whitespace-nowrap">
@@ -71,7 +65,7 @@ import Layout from "../layouts/Layout.astro";
       Accede al grupo de whatsapp</button
     >
   </div>
-</Layout>
+</LayoutLead>
 
 <script type="text/javascript">
   function clicked() {
