--- a/src/layouts/LayoutLead.astro
+++ b/src/layouts/LayoutLead.astro
@@ -31,8 +31,10 @@ const { title } = Astro.props;
       f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-NB8XTTR");
   </script>
+  <!-- End Google Tag Manager -->
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-NB8XTTR"
@@ -40,6 +42,7 @@ const { title } = Astro.props;
         width="0"
         style="display:none;visibility:hidden"></iframe></noscript
     >
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Meta Pixel Code -->
     <script is:raw>
@@ -68,6 +71,7 @@ const { title } = Astro.props;
       );
       fbq("init", "227610218315785");
       fbq("track", "PageView");
+      fbq("track", "Lead");
     </script>
     <noscript
       ><img
