--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -1,14 +1,13 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import LayoutLead from "../layouts/LayoutLead.astro";
 ---
 
-<script>
+<!-- <script>
   setTimeout(() => {
     window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
   }, 5000);
-</script>
-
-<Layout title="Gracias por registrarte">
+</script> -->
+<LayoutLead title="Gracias por registrarte">
   <div class="bg-rojo text-white text-xl md:text-2xl uppercase">
     <div class="relative flex overflow-x-hidden">
       <div class="py-12 animate-marquee whitespace-nowrap">
@@ -71,7 +70,7 @@ import Layout from "../layouts/Layout.astro";
       Accede al grupo de whatsapp</button
     >
   </div>
-</Layout>
+</LayoutLead>
 
 <script type="text/javascript">
   function clicked() {
