--- a/src/pages/wgracias.astro
+++ b/src/pages/wgracias.astro
@@ -1,8 +1,8 @@
 ---
-import LayoutLead from "../layouts/LayoutLead.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<LayoutLead title="Gracias por registrarte">
+<Layout title="Gracias por registrarte al Webinar">
   <div class="bg-rojo text-white text-xl md:text-2xl uppercase">
     <div class="relative flex overflow-x-hidden">
       <div class="py-12 animate-marquee whitespace-nowrap">
@@ -65,9 +65,9 @@ import LayoutLead from "../layouts/LayoutLead.astro";
       Accede al grupo de whatsapp</button
     >
   </div>
-</LayoutLead>
+</Layout>
 
-<script type="text/javascript">
+<script type="is:inline">
   function clicked() {
     window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
   }
