--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import "@fontsource/montserrat";
+import "@fontsource/nunito";
 interface Props {
   title: string;
 }
@@ -9,6 +11,14 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="/fonts/Soap.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+
     <meta charset="UTF-8" />
     <meta
       name="description"
@@ -41,44 +51,6 @@ const { title } = Astro.props;
         style="display:none;visibility:hidden"></iframe></noscript
     >
 
-    <!-- Meta Pixel Code -->
-    <script is:raw>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "227610218315785");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display:none"
-        src="https://www.facebook.com/tr?id=227610218315785&ev=PageView&noscript=1"
-      /></noscript
-    >
-    <!-- End Meta Pixel Code -->
-
     <slot />
   </body>
 </html>
@@ -87,20 +59,10 @@ const { title } = Astro.props;
 
 <style>
   @font-face {
-    font-family: "Montserrat";
-    src: url("/fonts/Montserrat-VariableFont_wght.ttf")
-      format("truetype-variations");
-  }
-  @font-face {
-    font-family: "Nunito";
-    src: url("/fonts/Nunito-VariableFont_wght.ttf")
-      format("truetype-variations");
-  }
-  @font-face {
     font-family: "Soap";
     src: url("/fonts/Soap.ttf") format("truetype");
+    font-display: swap;
   }
-
   p {
     font-family: "Montserrat";
   }
