--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -1,13 +1,13 @@
 ---
-import LayoutLead from "../layouts/LayoutLead.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<!-- <script>
+<script>
   setTimeout(() => {
     window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
   }, 5000);
-</script> -->
-<LayoutLead title="Gracias por registrarte">
+</script>
+<Layout title="Gracias por registrarte">
   <div class="bg-rojo text-white text-xl md:text-2xl uppercase">
     <div class="relative flex overflow-x-hidden">
       <div class="py-12 animate-marquee whitespace-nowrap">
@@ -70,9 +70,9 @@ import LayoutLead from "../layouts/LayoutLead.astro";
       Accede al grupo de whatsapp</button
     >
   </div>
-</LayoutLead>
+</Layout>
 
-<script type="text/javascript">
+<script>
   function clicked() {
     window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
   }
