fix: update site

--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <script>
   setTimeout(() => {
-    window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
+    window.location.replace("https://chat.whatsapp.com/FQUH8jdMv4dADy2TcLyIj1");
   }, 5000);
 </script>
 <Layout title="Gracias por registrarte">
@@ -73,7 +73,11 @@ import Layout from "../layouts/Layout.astro";
 </Layout>
 
 <script>
+  const button = document.querySelector("button");
+
+  button?.addEventListener("click", clicked);
+
   function clicked() {
-    window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
+    window.location.replace("https://chat.whatsapp.com/FQUH8jdMv4dADy2TcLyIj1");
   }
 </script>
