--- a/src/pages/inscripciones.astro
+++ b/src/pages/inscripciones.astro
@@ -73,7 +73,7 @@ import FondoMobile from "../assets/fondo gris_movil.png";
   <div
     class="md:-translate-y-36 -translate-y-20 md:w-[720px] w-[320px] mx-auto"
   >
-    <Videoplayer source="DAAMvdhkKqA" />
+    <Videoplayer source="Th9Gr2Q5Gak" />
   </div>
 
   <h2 class="font-soap text-center text-naranja text-3xl md:text-8xl md:mb-36">
