--- a/src/pages/wgracias.astro
+++ b/src/pages/wgracias.astro
@@ -2,6 +2,20 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
+<script>
+  setTimeout(() => {
+    window.location.replace("https://chat.whatsapp.com/FQUH8jdMv4dADy2TcLyIj1");
+  }, 5000);
+</script>
+<script>
+  const button = document.querySelector("button");
+
+  button?.addEventListener("click", clicked);
+
+  function clicked() {
+    window.location.replace("https://chat.whatsapp.com/FQUH8jdMv4dADy2TcLyIj1");
+  }
+</script>
 <Layout title="Gracias por registrarte al Webinar">
   <div class="bg-rojo text-white text-xl md:text-2xl uppercase">
     <div class="relative flex overflow-x-hidden">
@@ -60,15 +74,8 @@ import Layout from "../layouts/Layout.astro";
 
     <button
       class="bg-naranja p-4 text-white rounded-lg uppercase font-semibold"
-      onclick="clicked()"
     >
       Accede al grupo de whatsapp</button
     >
   </div>
 </Layout>
-
-<script type="is:inline">
-  function clicked() {
-    window.location.replace("https://chat.whatsapp.com/K65kuCdu2UW14nKdnSBlcs");
-  }
-</script>
